--- a/app/src/main/res/layout/dialog_donate.xml
+++ b/app/src/main/res/layout/dialog_donate.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
+  ~     Copyright (C) 2017 Merbin J Anselm <merbinjanselm@gmail.com>
+  ~
+  ~     This program is free software; you can redistribute it and/or modify
+  ~     it under the terms of the GNU General Public License as published by
+  ~     the Free Software Foundation; either version 2 of the License, or
+  ~     (at your option) any later version.
+  ~
+  ~     This program is distributed in the hope that it will be useful,
+  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~     GNU General Public License for more details.
+  ~
+  ~     You should have received a copy of the GNU General Public License along
+  ~     with this program; if not, write to the Free Software Foundation, Inc.,
+  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+  -->
+
+<!--
   ~     Copyright (C) 2016  Merbin J Anselm <merbinjanselm@gmail.com>
   ~
   ~     This program is free software; you can redistribute it and/or modify
@@ -77,9 +95,7 @@
         android:layout_height="52dp"
         android:gravity="center"
         android:orientation="horizontal"
-        android:paddingBottom="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="8dp">
+        android:paddingRight="8dp">
 
         <Space
             android:layout_width="0dp"
@@ -90,7 +106,7 @@
             android:id="@+id/but_paypal_donate"
             style="@style/TextAppearance.AppCompat.Button"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="48dp"
             android:background="?selectableItemBackground"
             android:clickable="true"
             android:gravity="center"
@@ -109,7 +125,7 @@
             android:id="@+id/but_donate_now"
             style="@style/TextAppearance.AppCompat.Button"
             android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_height="48dp"
             android:background="?selectableItemBackground"
             android:clickable="true"
             android:enabled="false"
